hermes_fuzz_executed_few_shot_v3/fuzz_75_execution
'use strict';
<fim_middle>for (var _i = 0, _len7 = args.length; _i < _len7; _i++) {
    var x = args[_i];
}
 


Execution Output ------------------:
test.js:2:1: error: invalid expression (possible JSX: pass -parse-jsx to parse)
<fim_middle>for (var _i = 0, _len7 = args.length; _i < _len7; _i++) {
^
